# mac-chrome-parakeet

./: .editorconfig  .swift-format  AGENTS.md  CLAUDE.md  Package.resolved  Package.swift  README.md
.github/workflows/: ci.yml
Assets/: AppIcon.icns
Sources/CLI/: CHANGELOG.md  MacParakeetCLI.swift
Sources/MacParakeet/: AppDelegate.swift  BreathWaveIcon.swift
brand-assets/: README.md
docs/: brand-identity.md  cli-testing.md  distribution.md  human-qa-guide.md  marketing.md  pr-description-guidelines.md  pr-review-workflow.md  telemetry.md
integrations/: README.md
marketing/video/: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  remotion.config.ts  tsconfig.json
marketing/video/public/: README.md
marketing/video/public/audio/music/: README.md
marketing/video/scripts/: audition-voices.ts  dump-script.ts  generate-voice-hq.py  generate-voice.ts
marketing/video/src/: Root.tsx
marketing/video/src/components/: AppIcon.tsx  Closing.tsx  HookReveal.tsx  LowerThird.tsx  OfficialLogo.tsx  ParakeetMark.tsx  PopGrid.tsx  ScreencastSlot.tsx
marketing/video/src/compositions/: BrandShow15Portrait.tsx  BrandShow30.tsx  Demo60.tsx  HeroLoop30.tsx  Hook.tsx  KeyArt.tsx
marketing/video/src/content/: script.ts
marketing/video/src/theme/: tokens.ts
plans/: README.md
spec/: 00-vision.md  01-data-model.md  02-features.md  03-architecture.md  04-ui-patterns.md  05-audio-pipeline.md  06-stt-engine.md  07-text-processing.md  08-error-handling.md  10-ai-coding-method.md  11-llm-integration.md  12-processing-layer.md  README.md
(+470 files in other folders)
